kubernetes/2.3/manifests/task-2/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-https
  namespace: lesson23
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-https
  template:
    metadata:
      labels:
        app: nginx-https
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
          - name: html-volume
            mountPath: /usr/share/nginx/html
          - name: ssl-volume
            mountPath: /etc/nginx/ssl
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
        ports:
          - containerPort: 80
          - containerPort: 443
      volumes:
        - name: html-volume
          configMap:
            name: nginx-html-https
        - name: ssl-volume
          secret:
            secretName: nginx-tls-secret
        - name: nginx-conf
          configMap:
            name: nginx-config
