kubernetes/2.3/manifests/task-2/svc-nginx-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-https
  namespace: lesson23
spec:
  selector:
    app: nginx-https
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
