kubernetes/2.3/manifests/task-2/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: lesson23
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
      - my-secure-app.ru
      secretName: nginx-tls-secret
  rules:
    - host: my-secure-app.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc-https
                port:
                  number: 443
